Fix Headings font-size on mobile

--- a/styles/parts/BlogPreview.module.sass
+++ b/styles/parts/BlogPreview.module.sass
@@ -5,7 +5,7 @@
     padding: 0 22px
     h1
       max-width: 460px
-      font-size: 12vw
+      font-size: 13vw
       line-height: 110%
       font-weight: 500
       letter-spacing: -0.055em
@@ -24,7 +24,8 @@
           // line-height: 140%
           // letter-spacing: -0.04em
           margin-top: 0
-          font-size: 30px
+          // font-size: 30px
+          font-size: 28px
           font-weight: 600
           letter-spacing: -0.045em
           line-height: 125%
