--- a/styles/parts/PresentationWrapper.module.sass
+++ b/styles/parts/PresentationWrapper.module.sass
@@ -16,7 +16,7 @@
         // margin-bottom: 20px
       h1
         // font-size: 9.5vw
-        font-size: 12vw
+        font-size: 13vw
         line-height: 110%
         font-weight: 500
         letter-spacing: -0.055em
