--- a/styles/parts/WorksGrid.module.sass
+++ b/styles/parts/WorksGrid.module.sass
@@ -3,7 +3,7 @@
   padding: 0 22px
   margin-bottom: 104px
   h1
-    font-size: 12vw
+    font-size: 13vw
     line-height: 110%
     font-weight: 500
     letter-spacing: -0.055em
@@ -27,8 +27,10 @@
       .data
         padding-right: 30px
         h2
-          font-size: 30px
+          // font-size: 30px
+          font-size: 28px
           font-weight: 600
+          margin-top: 0
           letter-spacing: -0.045em
           line-height: 125%
           color: var(--color-mid)
@@ -105,7 +107,7 @@
           // margin-bottom: 24px
         .data
           h2
-            margin-top: 0
+            // margin-top: 0
             font-size: 28px
             margin-bottom: 0
             // margin-bottom: 6px
